# cppstudy

./: .gitignore  README.md
advanced_features/: CMakeLists.txt  main.cpp
btree/: .clang-format  CMakeLists.txt
btree/src/: main.cpp
elibwebrtc/: CMakeLists.txt  Config.md  README.md
elibwebrtc/cmake/: ixwebsocket.cmake  json.cmake  libwebrtc.cmake  spdlog.cmake
elibwebrtc/example/: CMakeLists.txt  data_channel.cpp  hello.cpp
elibwebrtc/include/: app.h  candidate.h  data_channel.h  peerconnection.h  session_description.h  types.h  websockets.h
elibwebrtc/src/: app.cpp  data_channel.cpp  peerconnection.cpp  websockets.cpp
elibwebrtc/test/: CMakeLists.txt  app_test.cpp  websockets_test.cpp
filament/: CMakeLists.txt
filament/src/: main.cpp  main.mm
helloworld/: CMakeLists.txt  main.cpp
helloworld/include/: animal.h  cat.h  dog.h
helloworld/src/: CMakeLists.txt  animal.cpp  cat.cpp  dog.cpp  main.cpp
hnsw/: .gitignore  CMakeLists.txt
hnsw/data/: data.py  input.txt  output.txt
hnsw/include/: hnsw.h  utils.h
hnsw/src/: CMakeLists.txt  main.cpp
hnsw/test/: CMakeLists.txt  hnsw_test.cpp
json_request/: CMakeLists.txt  main.cpp
json_request/include/: request.h
json_request/src/: CMakeLists.txt  main.cpp  request.cpp
json_request/test/: CMakeLists.txt  request_test.cpp
kv_store/: CMakeLists.txt
kv_store/include/: base.h  hash_store.h  sharded_hash_store.h
kv_store/src/: CMakeLists.txt  hash_store.cpp  main.cpp  sharded_hash_store.cpp
kv_store/tests/: store_benchmark.cpp
memory/: CMakeLists.txt  main.cpp
multithreading/: CMakeLists.txt
multithreading/include/: thread_pool.h
multithreading/src/: CMakeLists.txt  main.cpp  thread_pool.cpp
olivec/: CMakeLists.txt  main.cpp
opengl/: CMakeLists.txt
opengl/src/: main.cpp
others/: CMakeLists.txt
rookiedb/: CMakeLists.txt
rookiedb/benchmarks/: CMakeLists.txt  benchmark_recall.cpp
rookiedb/include/: extra_attributes.h  filter.h  rookie_db.h  table.h  utils.h  vec_data.h  vector_database.h
rookiedb/scripts/: all_code.sh
rookiedb/src/: CMakeLists.txt  extra_attributes.cpp  main.cpp  rookie_db.cpp  vector_database.cpp
rookiedb/test/: CMakeLists.txt  extra_attributes_test.cpp  rookie_db_real_test.cpp  rookie_db_search_test.cpp  rookie_db_test.cpp  vector_database_test.cpp
shared_memory/: CMakeLists.txt
shared_memory/src/: reader.cpp  writer.cpp
template/: CMakeLists.txt
template/src/: CMakeLists.txt
template/vscode/: launch.json
unittest/: CMakeLists.txt
unittest/include/: calculator.h
unittest/src/: CMakeLists.txt  calculator.cpp
unittest/test/: CMakeLists.txt  calculator_test.cpp
vscode/: settings.json
web_server/: CMakeLists.txt
web_server/include/: http_request.h  http_response.h  http_server.h
web_server/src/: CMakeLists.txt  http_request.cpp  http_response.cpp  http_server.cpp  main.cpp
